[tool.poetry]
name = "alfa-ex-2"
version = "0.1.0"
description = ""
authors = ["Gabriel Spacki <ifprgabriel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
